compiler/weave_syntax/tests/data/syntax/statements/a0001.error
error: Unexpected tokens
        --> <source>:1:1
         |
       1 | public break
         | ^^^^^^^^^^^^
